add Initial Synapse GW related implementation
